--- a/config-client.properties
+++ b/config-client.properties
@@ -1,1 +1,1 @@
-message=Message from GIT Repository. This is a new value by srinivas boga..updated.
+message=Message from GIT Repository. This is a new value by srinivas boga..final.
