--- a/stock-service.properties
+++ b/stock-service.properties
@@ -1,1 +1,5 @@
 message=Message from GIT Repository. This is a new value by srinivas boga..final.
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service.url.defaultZone=http://localhost:8761
+eureka.instance.hostname=localhost
